--- a/shelter/scss/pets/pets-general.scss
+++ b/shelter/scss/pets/pets-general.scss
@@ -1,5 +1,5 @@
 .header {
-  margin-bottom: 30px;
+  margin-bottom: 27px;
 }
 
 .logo {
